# img_proc

./: .gitignore  CMakeLists.txt  README.md  README.md~  id_rsa.pub  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
circleDetection/: CMakeLists.txt  README.md
cpu_canny_edge/: CMakeLists.txt  README.md
cpu_canny_edge/video/: video.cpp
demo/: CMakeLists.txt  demo.cpp  demo.hpp
detection/: .detect_objects.cpp.swo  .detect_objects.cpp.swp  CMakeLists.txt  detect_objects.cpp  detect_objects.hpp  do_test.cpp  fps_test.cpp  grid_detect.cpp  grid_detect.hpp  in_range.cu
detection/misc/: gpu_canny_edge.cpp  gpu_canny_edge_video.cpp  gpu_circle_video.cpp  prediction_visualize.cpp
detection/misc/video_player/: filters.hpp  iFilter.hpp  test  testFilter.cpp  test_cpu_color_video.cpp  videoPlayer.cpp  videoPlayer.hpp
dnn/: CMakeLists.txt  resnet_ssd_face.ccp
dnn/face_detector/: test.prototxt.txt  train.prototxt.txt
gpu_canny_edge/: CMakeLists.txt  CMakeLists.txt~  gpu_canny_edge_video.cpp  gpu_canny_edge_video.cpp~  gpu_circle_video.cpp  gpu_circle_video.cpp~
nav/: nav.cpp  nav.hpp
navigation/: Navigation.cpp  Navigation.h  NavigationLogic.cpp  nav.cpp  nav.hpp  navigation.cpp  navigation.hpp
nn/: CMakeLists.txt  nn.cpp  nn_demo.cpp
nn/res/: bvlc_googlenet.prototxt
obj_detection/: CMakeLists.txt  tc_test.cpp  track_centers.cpp  track_centers.hpp
obj_detection/misc/video_player/: makefile
obj_tracking/: conf_arc.hpp
object_detection/: CMakeLists.txt  ccv_test  ccv_test.cpp  cpu_circle_video.cpp  cpu_circle_video.cpp~  cpu_color_video.cpp  cpu_color_video.cpp~  cpu_color_video.hpp  detection_framework.cpp  detection_framework.hpp  filters.h  filters.hpp  gpu_circle_video.cpp  iFilter.h  objectqueue.cpp  objectqueue.cpp~  prediction_visualize.cpp  prediction_visualize.cpp~  tc_test  tc_test.cpp  test  testFilter.cpp  testFilter.h  test_cpu_color_video.cpp  track_centers.cpp  track_centers.hpp  videoPlayer.cpp  videoPlayer.h  videoPlayer.hpp
object_detection/video_player/: iFilter.hpp  testFilter.cpp  test_cpu_color_video.cpp  videoPlayer.cpp
object_tracking/: CMakeLists.txt  conf_arc.cpp  conf_arc.hpp  conf_test  conf_test.cpp
roomba_tracking/: .#roomba_tracker.cpp  ConfidenceArc.cpp  ConfidenceArc.hpp  ConfidenceArcTester.cpp  cad  cat  cd  conf_arc.cpp  conf_arc.hpp  conf_test  conf_test.cpp  confidence.cpp  confidence.hpp  confidence_async_driver.cpp  confidence_async_driver_test  confidence_driver.cpp  confidence_driver_test  roomba_tracker.cpp  roomba_tracker.cpp~  test
test_cuda/: CMakeLists.txt  vector_add.cpp  vector_add.cu  vector_add.hpp
tracking/: CMakeLists.txt  conf_arc.cpp  conf_arc.hpp  conf_test.cpp
utilities/: CMakeLists.txt  FrameRateMonitor.cpp  FrameRateMonitor.h  video_test.cpp
