cmake_minimum_required (VERSION 2.8)
project (cannyEdge)
find_package (OpenCV REQUIRED)
add_executable (CannyEdgePicture picture/picture.cpp)
target_link_libraries (CannyEdgePicture ${OpenCV_LIBS})
add_executable (CannyEdgeVideo video/video.cpp)
target_link_libraries (CannyEdgeVideo ${OpenCV_LIBS})
