cmake_minimum_required(VERSION 2.8)
project( gpu_canny_edge )
find_package( OpenCV REQUIRED )
add_executable( gpu_canny_edge_picture.exe gpu_canny_edge.cpp )
target_link_libraries( gpu_canny_edge_picture.exe ${OpenCV_LIBS} )
add_executable( gpu_canny_edge_video.exe gpu_canny_edge_video.cpp )
target_link_libraries( gpu_canny_edge_video.exe ${OpenCV_LIBS} )
