cmake_minimum_required(VERSION 2.8)
project( gpu_canny_edge )
find_package( OpenCV REQUIRED )
#add_library( FRM STATIC ../utilities/FrameRateMonitor.cpp )
#add_executable( gpu_canny_edge_picture.exe gpu_canny_edge.cpp )
#target_link_libraries( gpu_canny_edge_picture.exe ${OpenCV_LIBS} )
add_executable( cpu_color_video.exe cpu_color_video.cpp )
target_link_libraries( cpu_color_video.exe ${OpenCV_LIBS} )
#add_executable( objectqueue.exe objectqueue.cpp )
#target_link_libraries( objectqueue.exe ${OpenCV_LIBS} )
add_executable( cpu_circle_video.exe cpu_circle_video.cpp )
target_link_libraries( cpu_circle_video.exe ${OpenCV_LIBS} )
#target_link_libraries( cpu_circle_video.exe FRM )
add_executable( prediction_visualize.exe prediction_visualize.cpp)
target_link_libraries( prediction_visualize.exe ${OpenCV_LIBS})
